@@ -6,7 +6,7 @@
   </head>
 
   <body id="homepage">
-    <img src="<%= request.getContextPath()%>/images/logo.jpg" />
+    <img src="<%= request.getContextPath()%>/images/logo.jpg" alt="Shibboleth Logo"/>
     <h1>Example Login Page</h1>
     <p>This login page is an example and should be customized.  Refer to the 
        <a href="https://wiki.shibboleth.net/confluence/display/SHIB2/IdPAuthUserPassLoginPage" target="_blank"> documentation</a>.
